name:                hconfig
version:             0.0.1
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Data.Config
  build-depends:     base >= 4.9 && < 5
                   , free >= 4.12 && < 5
                   , text >= 1.2 && < 2
  ghc-options:       -Wall
  hs-source-dirs:    src
  default-language:  Haskell2010
