name:                hconfig
version:             0.0.1
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Data.Config, Data.Config.Env
  build-depends:     base >= 4.9 && < 5
                   , containers >= 0.5 && < 1
                   , free >= 4.12 && < 5
                   , text >= 1.2 && < 2
                   , validation >= 0.4 && < 1
  ghc-options:       -Wall
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite spec
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  other-modules:     Data.Config.EnvSpec
  build-depends:     base >= 4.9 && < 5
                   , containers >= 0.5 && < 1
                   , hconfig
                   , hspec >= 2.4 && < 3
                   , validation >= 0.4 && < 1
  ghc-options:       -Wall
  hs-source-dirs:    test
  default-language:  Haskell2010
